# chatgpt-retrieval-plugin

./: .dockerignore  .env.example  .gitignore  .terraform.lock.hcl  ChatGPT_Retrieval_Plugin_QA.ipynb  ChatGPT_Retrieval_Plugin_QA.ipynb:Zone.Identifier  Dockerfile  Makefile  PROMPTS.md  Quobyte (1).md  README-zh.md  README.md  artifactory.tf  buildspec.yml  database_utils.py  docker-compose-init.yml  docker-compose.yaml  docker-compose.yml  env.sample  fly.dev.toml  fly.main.toml  fly.toml  index.html  init.sql  llama_index.json  provider.tf  pyproject.toml  requirements.txt  source_env.sh  variables.tf  versions.tf
.github/: pull_request_template.md
.github/workflows/: codeql.yml  defender-for-devops.yml  deploy.yml  docker-publish.yml  main.yaml  stale.yml
.well-known/: ai-plugin.json  openapi.json  openapi.yaml
.well_known/: ai_plugin.json  openapi.yaml
apps/fluidai_gpt/: __init__.py  authentication.py  data_store.py  models.py
apps/fluidai_gpt/cloud_storage_manager/: aws_s3.py  storage_factory.py  storage_manager.py
apps/fluidai_gpt/services/: file.py
auth/: auth_bearer.py  auth_handler.py
client/: package.json  tailwind.config.js
client/src/components/: File.tsx  FileQAndAArea.tsx  FileUploadArea.tsx  FileViewerList.tsx  LoadingSpinner.tsx  LoadingText.tsx
client/src/pages/: index.tsx
client/src/services/: utils.ts
client/src/types/: answer.ts  constants.ts  file.ts
data/: test.txt
datastore/: datastore.py  factory.py
datastore/providers/: __init__.py  alibabacloud_opensearch_datastore.py  analyticdb_datastore.py  azurecosmosdb_datastore.py  azuresearch_datastore.py  cassandra_datastore.py  chroma_datastore.py  dashvector_datastore.py  deeplake_datastore.py  elasticsearch_datastore.py  hippo_datastore.py  hologres_datastore.py  kdbai_datastore.py  llama_datastore.py  marqo_datastore.py  milvus_datastore.py  mongodb_atlas_datastore.py  opensearch_datastore.py  pgvector_datastore.py  pinecone_datastore.py  postgres_datastore.py  postgresml_datastore.py  qdrant_datastore.py  redis_datastore.py  searchium_datastore.py  supabase_datastore.py  tair_datastore.py  typesense_datastore.py  weaviate_datastore.py  zilliz_datastore.py
docs/deployment/: flyio.md  goldretriever.md  heroku.md  other-options.md  removing-unused-dependencies.md  render.md
docs/deprecated/: plugins.md
docs/providers/alibabacloudopensearch/: setup.md
docs/providers/analyticdb/: setup.md
docs/providers/azurecosmosdb/: setup.md
docs/providers/azuresearch/: setup.md
docs/providers/cassandra/: setup.md
docs/providers/chroma/: setup.md
docs/providers/dashvector/: setup.md
docs/providers/elasticsearch/: setup.md
docs/providers/hippo/: setup.md
docs/providers/hologres/: setup.md
docs/providers/kdbai/: setup.md
docs/providers/llama/: setup.md
docs/providers/marqo/: setup.md
docs/providers/milvus/: setup.md
docs/providers/mongodb/: setup.md
docs/providers/mongodb_atlas/: setup.md
docs/providers/opensearch/: setup.md
docs/providers/pgvector/: setup.md
examples/function-calling/: README.md
examples/memory/: README.md  ai-plugin.json  main.py  openapi.yaml
examples/mq/: main.py
front-end/: .gitignore  README.md  components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
front-end/src/: App.vue  main.ts
local-server/: main.py
local_server/: ai-plugin-local.json  ai-plugin.json  main.py  openapi-local.yaml  openapi.yaml
logs/: README.md  log_config.py
models/: api.py  models.py
mq/: factory.py  mq.py
mq/providers/: pulsar_mq.py
query_interface/: chat_utils.py  main.py
scripts/: add_envvar.sh
scripts/process_json/: README.md  example.json  process_json.py
scripts/process_jsonl/: README.md  example.jsonl  process_jsonl.py
scripts/process_openapi/: process_openapi.py
scripts/process_zip/: README.md  process_zip.py
server/: main.py
services/: chunks.py  date.py  db.py  embedding.py  extract_metadata.py  file.py  google_cloud_storage.py  openai.py  pii_detection.py  preprocess.py
tests/services/: test_file_service.py
(+74 files in other folders)
